--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -50,9 +50,13 @@
                     },
                     success: function(response)
                     {
-                        if(response.trim()=="Successlogin")
+                        if(response.trim()=="SuccessloginTeacher")
                         {
-                            window.location='/Dashboard'
+                            window.location='/Admin/Dashboard'
+                        }
+                        else if(response.trim()=="SuccessloginStudent")
+                        {
+                            window.location='/Student/Dashboard'
                         }
                         else{
                             $(".res").html(response);
