--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -18,12 +18,7 @@
     <script type="text/javascript" src="/js/magicscroll.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Eduvilla-SignUp</title>
-    <style>
-        .font-nice {
-            font-family: 'Sansita Swashed', cursive;
-        }
-    </style>
+    <title>Eduvilla-SignIn</title>
 </head>
 
 <div class="container-fluid m-0 p-0">
@@ -61,10 +56,10 @@
         </div>
     </div>
 
-
     <div class="container-fluid d-flex justify-content-center align-items-center">
+
+
         <div class="container p-md-5 rounded-lg ">
-            <!--style="background-color: #03364f;" -->
 
             <div class="row bg-light rounded-lg m-3 shadow-lg">
                 <div class="col-lg-6 p-0 pt-4 d-flex justify-content-center align-items-center flex-column">
@@ -81,28 +76,15 @@
                     <div style="background-color: rgba(211, 207, 207, 0.5);"
                         class="row rounded-lg py-3 px-lg-5 px-md-3">
                         <div class="col-12">
-                            <h3 class="font-nice">Eduvilla-SignUp</h3>
-                            <form class="signup-form">
-                                <input type="text" name="fname" class="form-control mt-3 fname" placeholder="Firstname"
-                                    autocomplete="off" required><br>
-                                <input type="text" name="lname" class="form-control lname" placeholder="Lastname"
-                                    autocomplete="off" required><br>
-                                <input type="text" name="address" class="form-control address" placeholder="Address"
-                                    autocomplete="off" required><br>
-                                <select class="form-control select" required>
-                                    <option value="">Select</option>
-                                    <option value="student" name="student">Student</option>
-                                    <option value="teacher" name="teacher">Teacher</option>
-                                </select><br>
-                                <input type="date" name="regdate" class="form-control date" value="today" required><br>
-                                <input type="email" name="email" class="form-control email" placeholder="Email"
-                                    required><br>
+                            <h3 class="font-nice">Eduvilla-SignIn</h3>
+                            <form class="reset-form">
+                                <input type="email" name="email" class="form-control mt-4 w-100 email shadow-sm"
+                                    placeholder="Email"><br>
                                 <input type="password" name="password1" class="form-control pass1"
-                                    placeholder="Password" required><br>
+                                    placeholder="New Password" required><br>
                                 <input type="password" name="password2" class="form-control pass2"
-                                    placeholder="Confirm Password" required>
-                                <button class="btn btn-success w-100 mb-3" type="submit">Sign up</button><br>
-
+                                    placeholder="Confirm Password" required> <br>
+                                <button class="btn btn-danger w-100 my-2" type="submit">Reset Password</button>
                             </form>
                         </div>
 
@@ -113,33 +95,23 @@
     </div>
     <script>
         $(document).ready(function () {
-            $(".signup-form").submit(function (e) {
+            $('.reset-form').submit(function (e) {
                 e.preventDefault();
                 var pass1 = $(".pass1").val();
                 var pass2 = $(".pass2").val();
                 if (pass1 == pass2) {
-                    var fname = $(".fname").val();
-                    var lname = $(".lname").val();
-                    var address = $(".address").val();
-                    var select = $('.select').find(":selected").val();
-                    var date = $('.date').val();
                     var email = $('.email').val();
                     $.ajax({
                         type: "POST",
-                        url: '/signup',
+                        url: '/resetpassword',
                         data: {
-                            fname: fname,
-                            lname: lname,
-                            address: address,
-                            select: select,
-                            date: date,
                             email: email,
                             password: pass1
                         },
                         success: function (response) {
                             if (response.trim() == "Success") {
                                 $(".notification").html(
-                                    " <div class='row animate__animated animate__slideInRight'><div class='col-3 d-flex justify-content-center align-items-center' style='background-color: rgb(33, 194, 33);'><i class='fa fa-check-circle text-light fa-2x'></i></div><div class='col-9 text-light pr-5 py-1' style='background-color: #32CD32'><h5 class='m-0'>Success</h5><p class='text-nowrap'>SignUp successfull !!</p></div></div>"
+                                    " <div class='row animate__animated animate__slideInRight'><div class='col-3 d-flex justify-content-center align-items-center' style='background-color: rgb(33, 194, 33);'><i class='fa fa-check-circle text-light fa-2x'></i></div><div class='col-9 text-light pr-5 py-1' style='background-color: #32CD32'><h5 class='m-0'>Success</h5><p class='text-nowrap'>Password reset successfull!!</p></div></div>"
                                 );
                                 setTimeout(function () {
                                     $(".notification").html("");
@@ -163,7 +135,6 @@
                         $(".notification").html("");
                     }, 2000)
                 }
-
             })
         })
     </script>
