--- a/views/Pages/Student/fine.ejs
+++ b/views/Pages/Student/fine.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/images/icon.png" type="image/gif">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -17,7 +18,7 @@
   <script type="text/javascript" src="/js/magicscroll.js"></script>
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <link rel="stylesheet" href="/css/style.css">
-  <title>Eduvilla-Summary</title>
+  <title>Eduvilla-Fine</title>
   <style>
     .search:focus {
       outline: none !important;
