--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -101,7 +101,7 @@
                                     placeholder="Password" required><br>
                                 <input type="password" name="password2" class="form-control pass2"
                                     placeholder="Confirm Password" required>
-                                <button class="btn btn-success w-100 mb-3" type="submit">Sign up</button><br>
+                                <button class="btn btn-success w-100 my-3" type="submit">Sign up</button><br>
 
                             </form>
                         </div>
